--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,27 @@ bin/
 
 ### Python ###
 venv/
+
+### Package Files ###
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rarid*
+
+### Compiled class files ###
+*.class
+
+### Log files ###
+*.log
+
+### BlueJ files ###
+*.ctxt
+
+### Mobile Tools for Java (J2ME) ###
+.mtj.tmp/
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_p
